--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container navbar-container">
                 <div class="navbar-holder">
                     <div class="navbar-container">
-                        <div class="brand-holder"><a href="#" class="brand w-nav-brand"><img width="Auto" loading="lazy" alt="" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c22d350c2b45fe48154bf3_Scarface%20Trades%20Logo.png" class="brand-image"/></a></div>
+                        <div class="brand-holder"><a href="#" class="brand w-nav-brand"><img width="Auto" loading="lazy" alt="" src="https://i.ibb.co/mCc0RR5F/5338831cc82181a2289597df6ff431ef9254f3f39f5ec2ceb8c291a32764c4f8.png" class="brand-image"/></a></div>
                         <nav
                             role="navigation" class="nav-menu w-nav-menu">
                             <div class="nav-menu-link-holder">
@@ -220,8 +220,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="w-node-d9fd2276-eaae-59b2-0eca-9a55e3c2dabf-d46f5317" class="team-user decreaseheight"><img sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, (max-width: 1279px) 89vw, 1084.765625px" srcset="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n-p-500.jpg 500w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n-p-800.jpg 800w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n-p-1080.jpg 1080w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n.jpg 1440w"
-                                alt="" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n.jpg" loading="lazy" class="team-image" />
+                        <div id="w-node-d9fd2276-eaae-59b2-0eca-9a55e3c2dabf-d46f5317" class="team-user decreaseheight"><img sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, (max-width: 1279px) 89vw, 1084.765625px" srcset="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n-p-500.jpg 500w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n-p-800.jpg 800w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c25a0c84c0d0d41f550bf3_436222544_365898579805623_6093792062154021273_n-p-1080.jpg 1080w, https://i.ibb.co/ffKGSn8/466373074-596051076330823-7333164016145131084-n.jpg 1440w"
+                                alt="" src="https://i.ibb.co/ffKGSn8/466373074-596051076330823-7333164016145131084-n.jpg" loading="lazy" class="team-image" />
                             <div class="team-content">
                                 <div class="teammate-title">Tony</div>
                                 <p class="paragraph-s">cryptorover</p>
@@ -372,7 +372,7 @@
             <div class="footer-wrapper">
                 <div class="footer-content">
                     <div id="w-node-_3949087b-3ad9-4345-ca47-20668c03fb89-d46f5317" class="footer-block">
-                        <div class="cta-logo-holder"><img loading="lazy" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c22d350c2b45fe48154bf3_Scarface%20Trades%20Logo.png" alt="" class="cta-logo" />
+                        <div class="cta-logo-holder"><img loading="lazy" src="https://i.ibb.co/mCc0RR5F/5338831cc82181a2289597df6ff431ef9254f3f39f5ec2ceb8c291a32764c4f8.png" alt="" class="cta-logo" />
                             <div class="cta-line"></div>
                         </div>
                         <p>cryptorover</p>
