--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                                 <div class="teammate-title"></div>
                                 <p class="paragraph-s">cryptorover</p>
                             </div>
-                            <div class="team-links"><a href="https://www.youtube.com/channel/UCI7bfebbOWLqw3m4zW7XjIg" target="_blank" class="feature-icon-holder w-inline-block"><img sizes="(max-width: 991px) 20.99609375px, (max-width: 1279px) 2vw, 20.99609375px" srcset="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3b2a49ca6935cd663874d_youtube%20(1)-p-500.png 500w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3b2a49ca6935cd663874d_youtube%20(1).png 512w" alt="" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3b2a49ca6935cd663874d_youtube%20(1).png" loading="lazy" class="feature-icon"/></a>
+                            <div class="team-links"><a href="https://www.youtube.com/@CryptoRover" target="_blank" class="feature-icon-holder w-inline-block"><img sizes="(max-width: 991px) 20.99609375px, (max-width: 1279px) 2vw, 20.99609375px" srcset="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3b2a49ca6935cd663874d_youtube%20(1)-p-500.png 500w, https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3b2a49ca6935cd663874d_youtube%20(1).png 512w" alt="" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3b2a49ca6935cd663874d_youtube%20(1).png" loading="lazy" class="feature-icon"/></a>
                                 <a
-                                    href="https://www.instagram.com/cryptorover_/?hl=en" target="_blank" class="feature-icon-holder w-inline-block"><img loading="lazy" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3ae92ebd62608bc81474c_Insta.svg" alt="" class="feature-icon" /></a>
+                                    href="https://www.instagram.com/cryptorover/?hl=en" target="_blank" class="feature-icon-holder w-inline-block"><img loading="lazy" src="https://cdn.prod.website-files.com/66c1e42c109b3b5add4c36b6/66c3ae92ebd62608bc81474c_Insta.svg" alt="" class="feature-icon" /></a>
                             </div>
                         </div>
                     </div>
